# resume_agent

./: .env.example  .gitignore  .vercelignore  DEPLOY-VERCEL.md  Foreman.command  README.md  config.example.yaml  dev-agent-build-plan.md  foreman-local-guide.html  foreman-presentation.html  job-agent-build-plan.md  presentation.html  pyproject.toml  requirements.txt  vercel.json
agent/: __init__.py  cli.py  config.py  loop.py
agent/tools/: __init__.py  base.py  files.py  python.py  web.py
api/: AI_resume_agent  index.py  requirements.txt
foreman/: __init__.py  agent.py  analytics.py  blackboard.py  cli.py  db.py  demo.py  environment.py  models.py  policy.py  repo.py  runner.py  schema.sql  tools.py  worktree.py
foreman/agents/: __init__.py  implementer.py  orchestrator.py  reviewer.py
foreman/tests/: test_architecture.py  test_system.py
foreman/web/: app.py
jobagent/: __init__.py  __main__.py  cli.py  cliutil.py  config.py  context.py  db.py  demo.py  events.py  logging_setup.py  models.py  pipeline.py  pipeline_agent.py  repo.py  schema.sql  util.py
jobagent/prep/: __init__.py  cli.py  fields.py  greenhouse_questions.py  runner.py
jobagent/review/: __init__.py  cli.py
jobagent/score/: __init__.py  base.py  claude.py  cli.py  heuristic.py  runner.py
jobagent/source/: __init__.py  base.py  cli.py  greenhouse.py  html_generic.py  http_client.py  lever.py  registry.py  runner.py  workable.py
jobagent/state/: __init__.py  companies.py  cover_letters.py  profile.py  resumes.py
jobagent/tailor/: __init__.py  cli.py  documents.py  runner.py
jobagent/track/: __init__.py  cli.py  followup.py  schedule.py  tracking.py
jobagent/web/: __init__.py  app.py  auth.py  cli.py
jobagent/web/templates/: _macros.html  base.html  companies.html  dashboard.html  guide.html  jobs.html  materials.html  profile.html  review_detail.html  review_list.html  tracker.html
samples/: cover_letter_generic.txt  cover_letter_template.txt.j2  resume_backend.txt  resume_data_scientist.txt
tests/: conftest.py  test_models_repo.py  test_pipeline.py  test_prep_guardrails.py  test_score.py  test_source.py  test_state_db.py  test_tailor.py  test_tools.py  test_web_deploy.py
