[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobagent"
version = "0.1.0"
description = "Local autonomous job-application preparation agent (human submits)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
# LLM-backed scoring + the Agent SDK loop (the pipeline runs without these).
llm = ["anthropic>=0.40", "claude-agent-sdk>=0.1"]
dev = ["pytest>=8.0", "python-dotenv>=1.0"]

[project.scripts]
jobagent = "jobagent.cli:main"

[tool.setuptools.packages.find]
include = ["jobagent*"]

[tool.setuptools.package-data]
jobagent = ["schema.sql"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
