[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-agent"
version = "0.1.0"
description = "A tiny, provider-agnostic LLM agent: a model in a loop that calls tools. Free by default (Groq / local Ollama)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30",   # OpenAI-compatible client; works with Groq, Ollama, Cerebras, ...
    "httpx>=0.27",    # used by the web tools
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "python-dotenv>=1.0"]

[project.scripts]
agent = "agent.cli:main"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
